	* Added 'WHCgiPost::sendAddUserCommand()' and
	'WHCgiPost::sendDeleteUserCommand()' methods in 'sy/sycgipost.cpp'
	and 'sy/sycgipost.h'.
	* Implemented 'ADDUSER' and 'DELETEUSER' commands in
	'src/webhostd/users.cpp' and 'src/webhostd/webhostd.h'.
2016-01-16 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.7.1.
2016-01-18 Fred Gleason <fredg@paravelsystems.com>
	* Added 'WHCgiPage::onLoadEvent()' and 'WHCgiPage::setOnLoadEvent()'
	methods in 'wh/whcgipage.cpp' and 'wh/whcgipage.h'.
2016-01-18 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.8.0.
2016-01-22 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'version' argument to the constructor of the 'WHCmdSwitch'
	class in 'wh/whcmdswitch.cpp' and 'wh/whcmdswitch.h'.
2016-01-25 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'WHCgiPost::getValue()' method for QUrl in
	'src/wh/whcgipost.cpp' and 'src/wh/whcgipost.h'.
2016-01-25 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.8.1.
2016-01-25 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'Makefile.am' where the 'webhost.pc' pkgconfig
	control file was not installed as part of the 'make install' target.
2016-01-25 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.8.2.
2016-01-26 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'make rpm' target.
2016-01-26 Fred Gleason <fredg@paravelsystems.com>
	* Modified the 'WHCgiPost::currentTime(); method in 'wh/whcgipost.cpp'
	to handle variant output styles of the timedatectl(1) command.
2016-01-26 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.8.3.
2016-01-27 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'src/wh/whcgipost.cpp' that caused the list
	of available timezones to have an empty entry at the end.
2016-01-27 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.8.4.