@@ -36,6 +36,7 @@ dist_libwebhost_la_SOURCES = whcgiapplication.cpp whcgiapplication.h\
                              whcgipage.cpp whcgipage.h\
                              whcgipost.cpp whcgipost.h\
                              whcmdswitch.cpp whcmdswitch.h\
+                             whnetwork.cpp whnetwork.h\
                              whprofile.cpp whprofile.h\
                              whsettings.cpp whsettings.h
 
@@ -48,6 +49,7 @@ include_HEADERS = whcgiapplication.h\
                   whcgipage.h\
                   whcgipost.h\
                   whcmdswitch.h\
+                  whnetwork.h\
                   whprofile.h\
                   whsettings.h
 
